* Delete the id field when copying a resource
* ma-validation-messages directive - Replace addControl method on child forms too
* Fix for editing/updating points from static watchlist
* Fix for being unable to remove all tags from a data point
* Add option to display tags on point value directive label
* Add options for displaying data point labels to ma-switch, ma-gauge-chart, ma-bar-display

*Version 3.6.2*
* Add inputs for script permissions to event handlers
* Redirect to password reset page when a token is present in the URL

*Version 3.6.1*
* Fix bug that prevented adding more than 100 data points to static watch list via point hierarchy
* Allow free text input for ma-serial-port-select port component

*Version 3.6.0*
* Upgraded to work with core version 3.6.x
* Add 'Data sources' page for creating/updating/deleting data sources and data points. Note: not all data source types supported yet.
* Added Spanish translation file
* Update 'Bulk data point edit' page to use same data point editor dialog as "Data sources" page
* Add 'Event handlers' page for creating/updating/deleting event handlers
* Add dialog for for creating/updating/deleting event detectors (opened from 'Data point details' or 'Data sources' page)
* Clean up menu, moved some menu items to 'Utilities' section of 'Admin home'
* Add more help pages and update existing help content
* Add HTTP server system settings
* Ability to set session expiration per user on the 'Users' page
* Better feedback when saving system settings
* Display event durations more accurately
* Ability to filter events table more specifically using advanced options toolbar
* Ability to require a role or a permission (configured via system settings) to show a menu item
* Use v2 REST API for statistics
* Data point on 'Data point details' is kept up to date via WebSocket
* Update data source drop down menus via WebSocket
* Add 'LED indicator' example